Home Page / Mobile / Fixed the overflow issue

--- a/src/styles/sass/page/_home.scss
+++ b/src/styles/sass/page/_home.scss
@@ -1,4 +1,8 @@
 .home-page {
+    overflow-y: auto;
+    @include mq("phone", max) {
+        overflow-y: hidden;
+    }
     .menu {
         background-color: transparent;
     }
